--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -378,8 +378,6 @@
         overflow: hidden;
         overflow-x: auto;
         scrollbar-width: none;
-        scroll-snap-type: x mandatory;
-        scroll-behavior: smooth;
         & .card {
             flex: 0 0 calc((100% - (16px * 2)) / 3);
             scroll-snap-align: start;
